@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.1048 2009-07-23 03:11:37 castaglia Exp $
+$Id: NEWS,v 1.1049 2009-07-29 20:59:03 castaglia Exp $
 
 -----------------------------------------------------------------------------
   More details on the bugs listed below can be found by using the bug number
@@ -20,6 +20,7 @@ CVS
 - Bug 3268 - Files whose names start with whitespace are not listed properly.
 - Bug 1908 - ExtendedLog to work properly in <Anonymous> context.
 - Bug 3269 - RewriteCondition OR/ornext flag does not work.
+- Bug 3254 - NLST/LIST and symbolic link problem.
 
 1.3.3rc1 - Released 30-Jun-2009
 --------------------------------
